--- a/portfolio1.html
+++ b/portfolio1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramya Lahari's Portfolio</title>
+    <title>Sri Poojitha's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Ramya Lahari</h1>
+        <h1>Sri Poojitha</h1>
         <p>Frontend & Backend Developer | Database Enthusiast</p>
     </header>
     
